--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
+    "nodemon": "^3.0.1",
     "validator": "^13.9.0"
   }
 }
